--- a/css/estilosBlog.css
+++ b/css/estilosBlog.css
@@ -3,4 +3,21 @@ body
     color: cornflowerblue;
     text-align: center;
     font-family: "Arial";
+    font-size: 22px;
+    margin: 10;
+    padding: 10;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 5px solid #ddd; 
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 36px;
 }
