--- a/css/estilosBlog.css
+++ b/css/estilosBlog.css
@@ -8,6 +8,24 @@ body
     padding: 10;
 }
 
+#cabecera
+{
+    background-color: beige;
+    box-shadow: 10px 5px 30px 0px rgba(0,0,0,0.75);
+                -webkit-box-shadow: 2px 0px 10px 0px rgba(0,0,0,0.75);
+                -moz-box-shadow: 10px 5px 30px 0px rgba(0,0,0,0.75);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1cm;
+    font-weight: normal;
+    font-size: 0.8cm;
+}
+
 #container
 {
     width: 70%;
@@ -20,4 +38,10 @@ body
 #container h1
 {
     font-size: 36px;
+}
+
+#post
+{
+ padding: 1cm;
+
 }
