--- a/css/estilosBlog.css
+++ b/css/estilosBlog.css
@@ -2,7 +2,7 @@ body
 {
     color: cornflowerblue;
     text-align: center;
-    font-family: "Arial";
+    font-family: "Verdana";
     font-size: 22px;
     margin: 10;
     padding: 10;
