Cambio de color y fuente a Arial y un azul más chusco

--- a/css/estilosBlog.css
+++ b/css/estilosBlog.css
@@ -1,8 +1,8 @@
 body
 {
-    color: cornflowerblue;
+    color: rgb(58, 115, 223);
     text-align: center;
-    font-family: "Verdana";
+    font-family: "Arial";
     font-size: 22px;
     margin: 10;
     padding: 10;
