--- a/css/estilosBlog.css
+++ b/css/estilosBlog.css
@@ -1,6 +1,7 @@
 body
 {
-    color: rgb(102, 58, 223);
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 22px;
@@ -10,13 +11,14 @@ body
 
 #cabecera
 {
-    background-color: beige;
+    background: #37488b;
     box-shadow: 10px 5px 30px 0px rgba(0,0,0,0.75);
                 -webkit-box-shadow: 2px 0px 10px 0px rgba(0,0,0,0.75);
                 -moz-box-shadow: 10px 5px 30px 0px rgba(0,0,0,0.75);
+    color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5cm;
+    padding: 0.5cm 0.5cm 2cm;
 }
 
 #cabecera #tagline
@@ -26,12 +28,18 @@ body
     font-size: 0.8cm;
 }
 
+
+#cabecera #logo
+{
+    width: 20px;
+}
+
 #container
 {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 5px solid #ddd; 
+    border: 5px solid rgb(255, 255, 255); 
     margin: 0 auto;
 }
 
@@ -42,6 +50,7 @@ body
 
 #post
 {
- padding: 1cm;
+    background: rgb(255, 255, 255);
+    padding: 1cm;
 
 }
